--- a/register.html
+++ b/register.html
@@ -48,6 +48,47 @@
           <p class="placeholder">Opsummering</p>
         </article>
       </section>
+      <form>
+        <label for="Navn">Navn</label>
+        <input type="text" id="navn" name="navn" />
+
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" />
+
+        <label for="dato_tid">Dato og tid</label>
+        <input type="date" id="dato_tid" name="dato_tid" />
+
+        <label for="sted">Sted for observation</label>
+        <input type="text" id="sted" name="sted" />
+
+        <label for="har_du_set">Har du set klikmonstret?</label>
+        <label for="ja">Ja</label>
+        <input type="radio" id="ja" name="har_du_set" value="ja" />
+        <label for="nej">Nej, kun hørt kliklyde</label>
+        <input type="radio" id="nej" name="har_du_set" value="nej" />
+
+        <label for="beskrivelse">Kort beskrivelse af hændelsen</label>
+        <input type="text" id="beskrivelse" name="beskrivelse" />
+
+        <label for="tegn">Observerede tegn</label>
+        <label for="kliklyde">Kliklyde</label>
+        <input type="checkbox" id="tegn" name="tegn" value="tegn" />
+        <label for="kuglepen">Kuglepen i hånden</label>
+        <input type="checkbox" id="kuglepen" name="kuglepen" value="kuglepen" />
+        <label for="bid">Forsøg på bid</label>
+        <input type="checkbox" id="bid" name="bid" value="bid" />
+
+        <label for="tegn">Eventuelle følger</label>
+        <label for="ingen">Ingen</label>
+        <input type="checkbox" id="ingen" name="ingen" value="ingen" />
+        <label for="bidemaerke">Bidemærke</label>
+        <input
+          type="checkbox"
+          id="bidemaerke"
+          name="bidemaerke"
+          value="bidemaerke"
+        />
+      </form>
     </main>
     <footer>
       <nav class="some">
