--- a/index.html
+++ b/index.html
@@ -67,15 +67,20 @@
       </section>
       <section id="breaking">
         <article class="news_card">
-          <h3>Nyhed</h3>
-          <p>Lorem ipsum dolor sit, sed minima asperiores.</p>
-          <img src="" alt="news_img" />
-          <a class="cta_btn" href="">Læs mere</a>
+          <h3>Klikmonster invidere 5C</h3>
+          <img src="img/inividere_5c.webp" alt="news_img" />
+          <p>Panik på linje 5C i København, hvor flere passagerer...</p>
+          <a popovertarget="popup" class="cta_btn" href="">Læs mere</a>
+
+          <div popover id="popup">
+            <h2>I'm a popup</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+          </div>
         </article>
         <article class="news_card">
           <h3>Nyhed</h3>
           <p>Lorem ipsum dolor sit, sed minima asperiores.</p>
-          <img src="" alt="news_img" />
+          <img src="img/bidemaerke.webp" alt="news_img" />
           <a class="cta_btn" href="">Læs mere</a>
         </article>
         <article class="news_card">
