--- a/register.html
+++ b/register.html
@@ -213,7 +213,7 @@
                     aria-describedby="acceptere_vilkaar_error"
                     required
                   />
-                  Acceptere vilkårene
+                  Acceptere vilkår
                 </label>
               </div>
               <p id="acceptere_vilkaar_error" class="error-message"></p>
