--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/burger.css" />
     <link rel="stylesheet" href="css/cards.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <link rel="icon" type="image/png" href="img/fav.png" />
     <title>Emergency Site</title>
   </head>
@@ -18,7 +19,118 @@
     <header>
       <nav>
         <div id="logotype-wrapper" class="logo">
-          <a href="index.html"> LOGO-TYPE </a>
+          <a href="index.html">
+            <?xml version="1.0" encoding="UTF-8"?>
+            <svg
+              id="Lag_1"
+              data-name="Lag 1"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 128.34 36.28"
+            >
+              <defs>
+                <style>
+                  .cls-1 {
+                    fill: #e7e6e6;
+                  }
+
+                  .cls-1,
+                  .cls-2,
+                  .cls-3,
+                  .cls-4,
+                  .cls-5 {
+                    stroke: #010101;
+                    stroke-miterlimit: 10;
+                    stroke-width: 0.3px;
+                  }
+
+                  .cls-6 {
+                    fill: #75383c;
+                  }
+
+                  .cls-2 {
+                    fill: #cdcccc;
+                  }
+
+                  .cls-3 {
+                    fill: #343434;
+                  }
+
+                  .cls-4 {
+                    fill: #30358c;
+                  }
+
+                  .cls-5 {
+                    fill: #28285b;
+                  }
+                </style>
+              </defs>
+              <g>
+                <path
+                  class="cls-6"
+                  d="M5.61,21.83h0c5.72-5.35,17.6-14.13,21.05-17.65.58-.29,1.33-.45,2.09-.45l7.39-.07c.13,0,.2.09.11.14l-14.64,14c-.06.03-.06.08,0,.12l18.85,14.78c.09.05,0,.14-.11.14h-6.25c-.58,0-1.13-.14-1.51-.39l-14.77-11.71s-.47-.43-.53-.4l-11.5,8.37s.02-1.46.02-1.43l-.09,5.77-.07-3.73-.04-7.49.21-17.66-.21,17.66h0Z"
+                />
+                <path
+                  class="cls-6"
+                  d="M62.34,32l-1.47-.04c-.8,0-1.45-.37-1.44-.84l.31-20.76h-.21l-10.23,17.26c-.18.35-.74.6-1.38.6h-1.36c-.64,0-1.21-.24-1.39-.6l-10.57-17.29h-.21l.14,14.37c.07,2.33-1.64,1.13-2.52.55l-1.97-1.3c-.23-.15-.35-.35-.35-.55v-11.97c0-.22.15-.43.43-.59l4.56-4.3c.78-.45,2.1-.24,2.4.37l10.03,15.17h.21l7.78-14.57c.3-.62,1.28-1.05,2.39-1.05l4.6.04c.8,0,1.45.37,1.44.83l-.6,23.84c0,.3-.16.56-.48.79h0l-.09.03h-.02Z"
+                />
+                <g id="pind">
+                  <path
+                    class="cls-4"
+                    d="M4.94,1.83v.61H.82v-.63C.82.9,1.63.15,2.63.15h.49c1.01,0,1.82.75,1.82,1.68h0Z"
+                  />
+                  <path
+                    class="cls-5"
+                    d="M5.62,2.63v30.61c0,.1-.11.19-.25.19H.4c-.14,0-.25-.08-.25-.19V2.63c0-.1.11-.19.25-.19h4.97c.14,0,.25.08.25.19h0Z"
+                  />
+                  <rect
+                    class="cls-1"
+                    x=".15"
+                    y="7.44"
+                    width="5.47"
+                    height="20.74"
+                  />
+                  <path
+                    class="cls-4"
+                    d="M3.39,2.44h1.56v9.07c0,.13-.15.24-.34.24h-.88c-.19,0-.34-.11-.34-.24V2.44h0Z"
+                  />
+                  <polygon
+                    class="cls-2"
+                    points="3.38 35.72 2.49 35.72 .45 33.43 5.32 33.43 3.38 35.72"
+                  />
+                  <path
+                    class="cls-3"
+                    d="M3.06,36.13h-.21c-.08,0-.13-.04-.13-.1l-.13-.32h.71l-.09.32s-.06.1-.13.1h-.02Z"
+                  />
+                </g>
+              </g>
+              <g>
+                <path
+                  class="cls-6"
+                  d="M76.58,25.82c0,4.6-2.96,6.43-5.69,6.43-3.18,0-5.56-2.31-5.56-6.26s2.49-6.41,5.74-6.41,5.52,2.46,5.52,6.24h0ZM68.33,25.92c0,2.25.92,4.15,2.65,4.15,1.63,0,2.58-1.91,2.58-4.18,0-1.87-.68-4.13-2.58-4.13s-2.65,2.21-2.65,4.16Z"
+                />
+                <path
+                  class="cls-6"
+                  d="M78.96,23.39c0-1.4-.05-2.5-.1-3.56h2.58l.15,1.71h.06c.55-.95,1.78-1.96,3.58-1.96,2.09,0,3.96,1.43,3.96,4.97v7.45h-2.96v-7.12c0-1.59-.53-2.87-2.05-2.87-1.06,0-1.83.76-2.12,1.71-.09.26-.14.64-.14,1.02v7.27h-2.96v-8.61h0Z"
+                />
+                <path
+                  class="cls-6"
+                  d="M92.04,29.26c.61.38,1.79.81,2.8.81,1.23,0,1.83-.55,1.83-1.37s-.46-1.25-1.84-1.83c-2.21-.89-3.1-2.15-3.09-3.53,0-2.13,1.7-3.76,4.35-3.76,1.23,0,2.28.32,2.96.69l-.59,2.1c-.5-.29-1.35-.65-2.3-.65-1.04,0-1.61.56-1.61,1.28s.5,1.11,1.93,1.73c2.04.84,3.01,1.99,3.02,3.7,0,2.3-1.73,3.79-4.67,3.79-1.32,0-2.59-.33-3.38-.81l.59-2.16h0Z"
+                />
+                <path
+                  class="cls-6"
+                  d="M105.26,16.41v3.42h2.76v2.19h-2.76v5.65c0,1.49.45,2.13,1.48,2.13.46,0,.81-.05,1.08-.12l.06,2.26c-.44.16-1.18.28-2.09.28-1.05,0-1.94-.33-2.5-.93-.64-.67-.94-1.72-.94-3.38v-5.91h-1.65v-2.19h1.65v-2.7l2.91-.71h0Z"
+                />
+                <path
+                  class="cls-6"
+                  d="M112.11,26.72c.07,2.36,1.64,3.26,3.44,3.26,1.26,0,2.19-.22,3.01-.52l.43,2.06c-.96.42-2.32.71-3.89.71-3.71,0-5.83-2.39-5.83-6.13s2-6.52,5.52-6.52,4.82,2.97,4.82,5.82c0,.61-.04,1.05-.1,1.33h-7.41,0ZM116.85,24.65c.02-1.38-.52-3.01-2.25-3.01s-2.38,1.71-2.49,3.01h4.74Z"
+                />
+                <path
+                  class="cls-6"
+                  d="M121.93,23.6c0-1.48-.04-2.7-.1-3.77h2.56l.12,2.17h.08c.56-1.57,1.86-2.42,3.07-2.42.29,0,.46.01.68.06v2.83c-.23-.05-.47-.07-.8-.07-1.3,0-2.29.88-2.57,2.26-.06.28-.09.63-.09,1v6.35h-2.96v-8.4h.01Z"
+                />
+              </g>
+            </svg>
+          </a>
         </div>
         <ul class="menu">
           <li><a class="menuItem" href="instruction.html">Nærkontakt </a></li>
@@ -33,7 +145,7 @@
     </header>
     <section id="main-disclamer">
       <div id="main-disclamer-content">
-        <img src="warning" alt="ICON" />
+        <img src="img/varsel.webp" alt="ICON" />
         <div>
           <h1>OVERSKRIFT</h1>
           <p class="sub">Underrubrik</p>
@@ -43,51 +155,173 @@
     <main>
       <section id="daily">
         <article class="daily_card">
-          <img src="" alt="teaser_img" />
+          <img src="img/klikmonster_gaden.webp.webp" alt="varselskilt" />
           <div class="daily_text">
-            <h2>Teaser</h2>
+            <h2>Sådan overlever du Klikmonsterets kliklyde</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
-              magnam ducimus ea, sed minima asperiores.
+              Panik opstår ofte, når man hører de konstante kliklyde. Her er
+              nogle tips til at holde monsteret på afstand:
             </p>
-            <a href="" class="cta_btn">Se mere</a>
+            <details>
+              <summary>Læs om symptomerne</summary>
+              <div class="content">
+                <ul>
+                  <li>
+                    <strong>Bevar roen:</strong> Ignorer lydene og lad dem
+                    passere.
+                  </li>
+                  <li>
+                    <strong>Klikfri kuglepenne:</strong> Fjern alt udstyr, der
+                    kan tiltrække opmærksomhed.
+                  </li>
+                  <li>
+                    <strong>Dyb vejrtrækning:</strong> Hjælper med at bevare
+                    tålmodighed og holde monsteret væk.
+                  </li>
+                  <li>
+                    <strong>Undgå at slå ud:</strong> Hvis du prøver at reagere,
+                    kan Klikmonsteret bide.
+                  </li>
+                  <li>
+                    <strong>Humor fungerer:</strong> Smil eller lav sjov med
+                    situationen for at reducere stress.
+                  </li>
+                </ul>
+              </div>
+            </details>
           </div>
         </article>
+
         <article class="daily_card">
-          <img src="" alt="teaser_img" />
+          <img src="img/indberetning.webp" alt="indberetning" />
           <div class="daily_text">
-            <h2>Teaser</h2>
+            <h2>Har du set et Klikmonster?</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
-              magnam ducimus ea, sed minima asperiores.
+              Hvis du har oplevet mystiske kliklyde eller bidemærker, er det
+              vigtigt at indberette observationen, så Klikmonsterberedskabet kan
+              holde styr på spredningen.
             </p>
-            <a href="" class="cta_btn">Se mere</a>
+            <details>
+              <summary>Læs mere</summary>
+              <div class="content">
+                <p>
+                  Klikmonsteret trives i stressede miljøer, og jo mere vi
+                  reagerer, desto tættere kommer det. Derfor er ro, humor og
+                  klikfri kuglepenne dine bedste forsvarsmekanismer.
+                </p>
+                <p>
+                  Har du set et Klikmonster? Klik på linket nedenfor og indberet
+                  hændelsen, så vi kan følge deres færden og advare andre:
+                  <a href="register.html">Indberet Klikmonster her</a>
+                </p>
+              </div>
+            </details>
           </div>
         </article>
       </section>
       <section id="breaking">
         <article class="news_card">
-          <h3>Klikmonster invidere 5C</h3>
+          <h3>KLIKMONSTER INVADERER 5C</h3>
           <img src="img/inividere_5c.webp" alt="news_img" />
-          <p>Panik på linje 5C i København, hvor flere passagerer...</p>
-          <a popovertarget="popup" class="cta_btn" href="">Læs mere</a>
-
-          <div popover id="popup">
-            <h2>I'm a popup</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+          <p>
+            Panik på linje 5C i København, hvor flere passagerer rapporterer...
+          </p>
+          <button popovertarget="popover_1" class="cta_btn">Læs mere</button>
+          <div popover id="popover_1">
+            <h2>
+              KLIKMONSTER INVADERER 5C - PANIK PÅ KØBENHAVNS MEST FYLDTE
+              BUSLINJE
+            </h2>
+            <h3>Kliklydene startede ved Nørrebro Station</h3>
+            <p>
+              Panik på linje 5C i København, hvor flere passagerer rapporterer
+              usædvanlige og vedvarende kliklyde midt under myldretiden. Flere
+              vidner beskriver en uidentificeret lydkilde, der flyttede sig
+              gennem bussen, ledsaget af en ubehagelig fornemmelse af at blive
+              iagttaget. “Jeg troede først, det var en stresset pendler,” siger
+              en chokeret passager, “men pennen klikkede videre . uden nogen
+              holdt den.” Situationen udviklede sig hurtigt, da passagerer
+              begyndte at reagere på lyden, hvilket ifølge eksperter kun
+              tiltrækker Klikmonsteret yderligere.
+            </p>
+            <h3>Beredskabet hæver trusselsniveauet 'til irriterende'</h3>
+            <p>
+              Klikberedskabet har nu udsendt en landsdækkende advarsel om at
+              undgå kliklyde i offentlige transportmidler. Myndighederne
+              understreger, at væsnet kan bide, hvis man forsøger at slå ud
+              efter det. I stedet anbefales ro, dyb vejrtrækning og - i akutte
+              tilfælde - brug af blyant. “Klikmonsteret trives i stressede
+              miljøer,” udtaler en talsperson fra Institut for Lydpsykologisk
+              Adfærd. “Jo mere vrede man føler, jo tættere kommer det. Det
+              bedste forsvar er simpelthen ikke at tage det personligt.”
+            </p>
           </div>
         </article>
+
         <article class="news_card">
-          <h3>Nyhed</h3>
-          <p>Lorem ipsum dolor sit, sed minima asperiores.</p>
+          <h3>BIDEMÆRKER OBSERVERET PÅ FLERE BORGERE</h3>
+          <p>Efter gentagne kliklyde i kontorer, busser og offentlige rum...</p>
           <img src="img/bidemaerke.webp" alt="news_img" />
-          <a class="cta_btn" href="">Læs mere</a>
+          <button popovertarget="popover_2" class="cta_btn">Læs mere</button>
+          <div popover id="popover_2">
+            <h2>BIDEMÆRKER OBSERVERET PÅ FLERE BORGERE</h2>
+            <p>
+              Efter gentagne kliklyde i kontorer, busser og offentlige rum har
+              flere personer bemærket små, mystiske bidemærker på arme, hænder
+              og skuldre. Mærkerne beskrives som let rødlige, cirkulære og ofte
+              ledsaget af en svag kløe eller ømhed. Flere vidner fortæller, at
+              de først troede, det var almindelige insektbid, men mistænkelige
+              lyde og mærkernes mønster afslørede, at det faktisk stammer fra
+              Klikmonsteret. Eksperter advarer, at sådanne bidemærker typisk
+              opstår, hvis man forsøger at reagere på de irriterende kliklyde,
+              eller hvis man bliver for ophidset over situationen.
+            </p>
+            <h3>Symptomer efter bid:</h3>
+            <ol>
+              <li>Ømhed omkring bidestedet</li>
+              <li>Let kløe eller prikken</li>
+              <li>Mindre blå mærker ved hårdere kontakt</li>
+            </ol>
+            <p>
+              Beredskabet anbefaler at beholde roen, undgå at reagere på
+              kliklydene og rapportere hændelsen via emergency-portalen.
+            </p>
+          </div>
         </article>
+
         <article class="news_card">
-          <h3>Nyhed</h3>
-          <p>Lorem ipsum dolor sit, sed minima asperiores.</p>
-          <img src="" alt="news_img" />
-          <a class="cta_btn" href="">Læs mere</a>
+          <h3>STRESS OG KAFFE TILTRÆKKER KLIKMONSTERET</h3>
+          <p>
+            Forskere fra Institut for Lydpsykologisk Adfærd advarer nu om...
+          </p>
+          <img src="img/forskning.webp" alt="news_img" />
+          <button popovertarget="popover_3" class="cta_btn">Læs mere</button>
+          <div popover id="popover_3">
+            <h2>STRESS OG KAFFE TILTRÆKKER KLIKMONSTERET</h2>
+            <p>
+              Forskere fra Institut for Lydpsykologisk Adfærd advarer nu om, at
+              Klikmonsteret har udviklet særlige præferencer for moderne
+              menneskers livsstil. Ifølge eksperterne reagerer væsnet særligt på
+              <strong
+                >høj koffeinindtagelse, tæt pakket skemaer og pressede
+                deadlines</strong
+              >, hvilket gør kontorer og caféer til oplagte angrebssteder.
+            </p>
+            <p>
+              “Jo mere stress og jag, jo mere aktivt bliver Klikmonsteret,”
+              forklarer en talsperson fra instituttet. Vidner beretter om
+              vedvarende kliklyde under møder og intense arbejdsperioder, ofte
+              ledsaget af en ubehagelig fornemmelse af at blive iagttaget.
+            </p>
+            <p>
+              Beredskabet anbefaler, at man
+              <strong
+                >bevarer roen, holder pauser og begrænser kaffeforbruget</strong
+              >, hvis man vil undgå at tiltrække Klikmonsteret. Eksperter
+              understreger, at humor og tålmodighed fungerer som de bedste
+              forsvarsmekanismer mod væsnets klik-angreb.
+            </p>
+          </div>
         </article>
       </section>
     </main>
