--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
     <section id="main-disclamer">
       <div id="main-disclamer-content">
         <img src="img/varsel.webp" alt="ICON" />
-        <div>
-          <h1>OVERSKRIFT</h1>
-          <p class="sub">Underrubrik</p>
+        <div class="index_overskrifter">
+          <h1 class="index_h1">DANMARK ER INVADERET</h1>
+          <p class="sub">Her er statens officielle guidelines.</p>
         </div>
       </div>
     </section>
