--- a/register.html
+++ b/register.html
@@ -176,7 +176,7 @@
 
             <div class="form_group">
               <label for="dato_tid" class="undertitle_form"
-                >Dato og tid for observationen</label
+                >Dato for observationen</label
               >
               <input
                 type="date"
@@ -185,7 +185,7 @@
                 aria-describedby="dato_tid_error"
                 required
               />
-              <p id="dato_tid_error">Indsæt dato og tid</p>
+              <p id="dato_tid_error">Indsæt dato</p>
             </div>
 
             <div class="form_group">
@@ -345,9 +345,7 @@
             Fulde navn: <span id="fulde_navn_output"></span>
           </p>
           <p class="output_titel">Email: <span id="email_output"></span></p>
-          <p class="output_titel">
-            Dato og tidspunkt: <span id="dato_tid_output"></span>
-          </p>
+          <p class="output_titel">Dato: <span id="dato_tid_output"></span></p>
           <p class="output_titel">Sted: <span id="sted_output"></span></p>
           <p class="output_titel">
             Har du set klikmonstret?: <span id="har_du_set_output"></span>
